--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.googlecode.sr-player</groupId>
-	<artifactId>sr-player-root</artifactId>
+	<groupId>com.googlecode.srplayer</groupId>
+	<artifactId>srplayer-root</artifactId>
     <version>0.8.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
     <name>SR Player - Root</name>
@@ -36,7 +36,7 @@
     </build>
     
     <modules>
-		<module>sr-player/SRPlayer</module>
-		<module>sr-player-SRPlayerTest</module>
+		<module>srplayer/SRPlayer</module>
+		<module>srplayer-SRPlayerTest</module>
 	</modules>
 </project>
