--- a/sr-player-SRPlayerTest/pom.xml
+++ b/sr-player-SRPlayerTest/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.googlecode.sr-player</groupId>
-        <artifactId>sr-player-root</artifactId>
+        <groupId>com.googlecode.srplayer</groupId>
+        <artifactId>srplayer-root</artifactId>
         <version>0.8.1-SNAPSHOT</version>
     </parent>
-    <groupId>com.googlecode.sr-player</groupId>
-    <artifactId>sr-player-instrumentationtest</artifactId>
+    <groupId>com.googlecode.srplayer</groupId>
+    <artifactId>srplayer-instrumentationtest</artifactId>
     <packaging>apk</packaging>
     <name>SR Player - Instrumentation Test</name>
 
@@ -36,16 +36,16 @@
         <dependency>
             <!-- the target apk, which we will test. will automatically be deployed to device in pre-integration-test
             phase. -->
-            <groupId>com.googlecode.sr-player</groupId>
-            <artifactId>sr-player-app</artifactId>
+            <groupId>com.googlecode.srplayer</groupId>
+            <artifactId>srplayer-app</artifactId>
             <version>${project.version}</version>
             <type>apk</type>
         </dependency>
 
         <dependency>
             <!-- optional: compile time dependency, in this case so that we can read from the R.java for example. -->
-            <groupId>com.googlecode.sr-player</groupId>
-            <artifactId>sr-player-app</artifactId>
+            <groupId>com.googlecode.srplayer</groupId>
+            <artifactId>srplayer-app</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
             <type>jar</type>
