Moved sr-player-SRPlayerTest to srplayer/srplayer-test.

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,6 @@
     
     <modules>
 		<module>srplayer/SRPlayer</module>
-		<module>srplayer-SRPlayerTest</module>
+		<module>srplayer/test</module>
 	</modules>
 </project>
