--- a/TestWithoutSource/pom.xml
+++ b/TestWithoutSource/pom.xml
@@ -1,32 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.jayway.android.astro</groupId>
-    <artifactId>astro-instrumentationtest</artifactId>
+    <parent>
+        <groupId>com.jayway.android.robotium.samples.srplayer</groupId>
+        <artifactId>srplayer</artifactId>
+        <version>0.1.0-SNAPSHOT</version>
+    </parent>
+    <groupId>com.jayway.android.robotium.samples.astro</groupId>
+    <artifactId>astro-test</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>apk</packaging>
-    <name>Astro File Manager - Instrumentation Test</name>
-
-    <repositories>
-        <repository>
-            <id>oss.sonatype.org-jayway-with-staging</id>
-            <url>http://oss.sonatype.org/content/groups/jayway-with-staging/</url>
-            <snapshots><enabled>true</enabled></snapshots>
-        </repository>
-    </repositories>
+    <name>Astro File Manager - Test</name>
 
     <dependencies>
 
         <dependency>
             <groupId>com.jayway.android.robotium</groupId>
             <artifactId>robotium-solo</artifactId>
-            <version>1.4.1-SNAPSHOT</version>
+            <version>1.7.2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>android</groupId>
+            <groupId>com.google.android</groupId>
             <artifactId>android</artifactId>
-            <version>1.6_r2</version>
             <scope>provided</scope>
         </dependency>
 
@@ -48,13 +44,7 @@
             <plugin>
                 <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                 <artifactId>maven-android-plugin</artifactId>
-                <version>2.3.3</version>
                 <extensions>true</extensions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3</version>
             </plugin>
         </plugins>
     </build>
