--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.googlecode.srplayer</groupId>
-	<artifactId>srplayer-root</artifactId>
-    <version>0.8.1-SNAPSHOT</version>
+    <groupId>com.jayway.android.robotium.samples</groupId>
+    <artifactId>samples</artifactId>
+    <version>0.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-    <name>SR Player - Root</name>
+    <name>Robotium Samples</name>
+
+    <modules>
+		<module>srplayer</module>
+		<!--<module>secrets-for-android</module>-->
+		<!--<module>TestWithoutSource</module>-->
+	</modules>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>android</groupId>
+                <groupId>com.google.android</groupId>
                 <artifactId>android</artifactId>
+                <version>1.6_r2</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.android</groupId>
+                <artifactId>android-test</artifactId>
                 <version>1.6_r2</version>
             </dependency>
         </dependencies>
@@ -23,20 +38,16 @@
                 <plugin>
                     <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                     <artifactId>maven-android-plugin</artifactId>
-                    <version>2.3.3</version>
+                    <version>2.5.3-SNAPSHOT</version>
                     <extensions>true</extensions>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.3</version>
+                    <version>2.3.2</version>
                 </plugin>
             </plugins>
         </pluginManagement>
     </build>
     
-    <modules>
-		<module>srplayer/SRPlayer</module>
-		<module>srplayer/test</module>
-	</modules>
 </project>
