--- a/srplayer/srplayer-test/pom.xml
+++ b/srplayer/srplayer-test/pom.xml
@@ -2,51 +2,48 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.googlecode.srplayer</groupId>
-        <artifactId>srplayer-root</artifactId>
-        <version>0.8.1-SNAPSHOT</version>
+        <groupId>com.jayway.android.robotium.samples.srplayer</groupId>
+        <artifactId>srplayer</artifactId>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.googlecode.srplayer</groupId>
+    <groupId>com.jayway.android.robotium.samples.srplayer</groupId>
     <artifactId>srplayer-test</artifactId>
     <packaging>apk</packaging>
     <name>SR Player - Test</name>
-
-    <repositories>
-        <repository>
-            <id>oss.sonatype.org-jayway-with-staging</id>
-            <url>http://oss.sonatype.org/content/groups/jayway-with-staging/</url>
-            <snapshots><enabled>true</enabled></snapshots>
-        </repository>
-    </repositories>
 
     <dependencies>
 
         <dependency>
             <groupId>com.jayway.android.robotium</groupId>
             <artifactId>robotium-solo</artifactId>
-            <version>1.4.1-SNAPSHOT</version>
+            <version>1.7.2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>android</groupId>
+            <groupId>com.google.android</groupId>
             <artifactId>android</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.android</groupId>
+            <artifactId>android-test</artifactId>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <!-- the target apk, which we will test. will automatically be deployed to device in pre-integration-test
             phase. -->
-            <groupId>com.googlecode.srplayer</groupId>
+            <groupId>com.jayway.android.robotium.samples.srplayer</groupId>
             <artifactId>srplayer-app</artifactId>
-            <version>${project.version}</version>
+            <version>0.8.4-SNAPSHOT</version>
             <type>apk</type>
         </dependency>
 
         <dependency>
             <!-- optional: compile time dependency, in this case so that we can read from the R.java for example. -->
-            <groupId>com.googlecode.srplayer</groupId>
+            <groupId>com.jayway.android.robotium.samples.srplayer</groupId>
             <artifactId>srplayer-app</artifactId>
-            <version>${project.version}</version>
+            <version>0.8.4-SNAPSHOT</version>
             <scope>compile</scope>
             <type>jar</type>
         </dependency>
