--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <modules>
 		<module>srplayer</module>
 		<!--<module>secrets-for-android</module>-->
-		<!--<module>test-without-source</module>-->
+		<module>test-without-source</module>
 	</modules>
 
     <properties>
@@ -19,6 +19,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.jayway.android.robotium</groupId>
+                <artifactId>robotium-solo</artifactId>
+                <version>1.7.2-SNAPSHOT</version>
+            </dependency>
             <dependency>
                 <groupId>com.google.android</groupId>
                 <artifactId>android</artifactId>
@@ -40,6 +45,12 @@
                     <artifactId>maven-android-plugin</artifactId>
                     <version>2.5.3-SNAPSHOT</version>
                     <extensions>true</extensions>
+                    <configuration>
+                        <sdk>
+                            <path>${env.ANDROID_HOME}</path>
+                        </sdk>
+                        <undeployBeforeDeploy>true</undeployBeforeDeploy>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
