--- a/test-without-source/pom.xml
+++ b/test-without-source/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.jayway.android.robotium.samples.srplayer</groupId>
-        <artifactId>srplayer</artifactId>
+        <groupId>com.jayway.android.robotium.samples</groupId>
+        <artifactId>samples</artifactId>
         <version>0.1.0-SNAPSHOT</version>
     </parent>
     <groupId>com.jayway.android.robotium.samples.astro</groupId>
@@ -17,7 +17,6 @@
         <dependency>
             <groupId>com.jayway.android.robotium</groupId>
             <artifactId>robotium-solo</artifactId>
-            <version>1.7.2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -25,14 +24,19 @@
             <artifactId>android</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.android</groupId>
+            <artifactId>android-test</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <!-- the target apk, which we will test. will automatically be deployed to device in pre-integration-test
             phase. -->
-            <groupId>com.jayway.android.astro</groupId>
+            <groupId>com.jayway.android.com.metago.astro</groupId>
             <artifactId>astro</artifactId>
             <classifier>debugsigned</classifier>
-            <version>2.3.1</version>
+            <version>2.5.2</version>
             <type>apk</type>
         </dependency>
 
