Declare android dependency version in pluginManagement.

--- a/secrets-for-android/pom.xml
+++ b/secrets-for-android/pom.xml
@@ -16,4 +16,20 @@
 		<module>secrets-for-android-app</module>
 		<!--<module>secrets-for-android-test</module>-->
 	</modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.google.android</groupId>
+                <artifactId>android</artifactId>
+                <version>2.2.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.android</groupId>
+                <artifactId>android-test</artifactId>
+                <version>2.2.1</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
 </project>
