Upgraded to maven-android-plugin 2.6.0.

--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
                 <plugin>
                     <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                     <artifactId>maven-android-plugin</artifactId>
-                    <version>2.5.3-SNAPSHOT</version>
+                    <version>2.6.0</version>
                     <extensions>true</extensions>
                     <configuration>
                         <sdk>
