--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
             <dependency>
                 <groupId>com.jayway.android.robotium</groupId>
                 <artifactId>robotium-solo</artifactId>
-                <version>1.7.2-SNAPSHOT</version>
+                <version>1.8.0-beta-2</version>
             </dependency>
             <dependency>
                 <groupId>com.google.android</groupId>
