Disabled test-without-source, because it requires a re-signed apk not publically available.

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <modules>
 		<module>srplayer</module>
 		<module>secrets-for-android</module>
-		<module>test-without-source</module>
+		<!-- <module>test-without-source</module> -->
 	</modules>
 
     <properties>
