--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 
     <modules>
 		<module>srplayer</module>
-		<module>secrets-for-android</module>
-		<!-- <module>test-without-source</module> -->
+		<!--<module>secrets-for-android</module>-->
+		 <!--<module>test-without-source</module>-->
 	</modules>
 
     <properties>
@@ -42,12 +42,12 @@
             <plugins>
                 <plugin>
                     <groupId>com.jayway.maven.plugins.android.generation2</groupId>
-                    <artifactId>maven-android-plugin</artifactId>
-                    <version>2.8.4</version>
+                    <artifactId>android-maven-plugin</artifactId>
+                    <version>3.0.0-alpha-13</version>
                     <extensions>true</extensions>
                     <configuration>
                         <sdk>
-                            <path>${env.ANDROID_HOME}</path>
+                            <platform>4</platform>
                         </sdk>
                         <undeployBeforeDeploy>true</undeployBeforeDeploy>
                     </configuration>
